--- a/styles/style.css
+++ b/styles/style.css
@@ -967,7 +967,9 @@ form fieldset input[type="email"] {
     width: 90%;
   }
   .top-bar {
-    padding: 5% 10%;
+    padding: 20px 0;
+    max-width: 1200px;
+    margin: 0 auto;
   }
   .top-nav label, .top-nav input {
     display: none;
@@ -1061,6 +1063,11 @@ section.intro {
   margin-right: 100px;
 }
 
+.intro-content .intro-txt h2 {
+  font-size: 2.3rem;
+  letter-spacing: 3px;
+}
+
 .intro-content .intro-txt p {
   margin-bottom: 15px;
 }
@@ -1084,10 +1091,10 @@ section.intro {
 }
 
 .gallery-imgs li {
-  margin: 0 10px;
+  margin: 0 15px;
   -webkit-box-flex: 1;
-      -ms-flex: 1 0 calc(33.3% - 20px);
-          flex: 1 0 calc(33.3% - 20px);
+      -ms-flex: 1 0 calc(33.3% - 30px);
+          flex: 1 0 calc(33.3% - 30px);
 }
 
 .gallery-imgs li:first-child {
@@ -1112,6 +1119,11 @@ section.intro {
           flex: 1 0 50%;
 }
 
+.about1-contents-container .about1-content .about1-text {
+  -ms-flex-preferred-size: 80%;
+      flex-basis: 80%;
+}
+
 section.about2 {
   padding: initial;
 }
@@ -1125,15 +1137,28 @@ section.about2 {
 .about2-contents-container .about2-content {
   padding: initial;
   -webkit-box-flex: 1;
-      -ms-flex: 1 0 50%;
-          flex: 1 0 50%;
+      -ms-flex: 1 0 calc(50% - 75px);
+          flex: 1 0 calc(50% - 75px);
+  margin: 0 75px;
+  max-width: 670px;
 }
 
 .about2-contents-container .about2-content .about2-img {
   margin: 0 0 100px 0;
 }
 
+.about2-contents-container .about2-content .about2-text {
+  padding: 0;
+}
+
+.about2-content:first-child {
+  margin-left: 0;
+  position: relative;
+  top: -20px;
+}
+
 .about2-content:first-child .about2-text {
+  padding-left: 100px;
   -webkit-box-align: end;
       -ms-flex-align: end;
           align-items: end;
@@ -1141,6 +1166,34 @@ section.about2 {
 
 .about2-content:first-child .about2-text p {
   text-align: right;
+}
+
+.about2-content:last-child {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: column-reverse;
+          flex-direction: column-reverse;
+  margin-right: 0;
+  position: relative;
+  bottom: -20px;
+}
+
+.about2-content:last-child .about2-img {
+  margin: 100px 0 0 0;
+}
+
+.about2-content:last-child .about2-text {
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+  padding-right: 100px;
+}
+
+.about3-content {
+  padding: 100px 15%;
 }
 
 .scroll-up-btn {
