--- a/styles/sass/layout/_media-queries.scss
+++ b/styles/sass/layout/_media-queries.scss
@@ -276,10 +276,9 @@
   .blog-contents-container {
     display: flex;
     align-items: start;
-    // padding-bottom: 50px;
     .blog-post {
-      flex: 2 0 calc(70% - 50px);
-      margin-right: 50px;
+      flex: 2 0 calc(70% - 100px);
+      margin-right: 100px;
       position: relative;
       top: -85px;
       .post {
@@ -289,12 +288,12 @@
       }
     }
     aside {
-      flex: 1 0 calc(30% - 50px);
-      margin-left: 50px;
+      flex: 1 0 calc(30% - 75px);
+      margin-left: 75px;
       border-left: 15px solid $color-green;
       border-bottom: 13px solid $color-green;
       position: relative;
-      top: 100px;
+      top: 120px;
       .aside-content {
         padding: 0;
         position: relative;
@@ -310,15 +309,15 @@
   }
 
   .blog-text, .comments {
-    padding: 20px 50px 30px 100px;
+    padding: 20px 50px 30px 120px;
   }
 
   .blog-text h2 {
     margin-top: 35px;
   }
 
-  form {
-    padding: 20px 0 0 100px;
+  .blog-form {
+    padding: 20px 0 0 120px;
   }
 
   .comments {
