updated  contact page desktop layout

--- a/styles/style.css
+++ b/styles/style.css
@@ -1166,12 +1166,13 @@ footer p {
   }
   .blog-header {
     height: 500px;
+    background-position: center;
   }
   .blog-header h1 {
     font-size: 5rem;
     letter-spacing: 4px;
     max-width: 1200px;
-    margin: 75px auto 0 auto;
+    margin: 200px auto 0 auto;
   }
   .blog-contents-container {
     display: -webkit-box;
@@ -1232,6 +1233,45 @@ footer p {
   .comments .comments-content {
     -ms-flex-wrap: nowrap;
         flex-wrap: nowrap;
+  }
+  .contact-header {
+    height: 500px;
+    background-position: center;
+  }
+  .contact-header h1 {
+    font-size: 5rem;
+    letter-spacing: 4px;
+    max-width: 1200px;
+    margin: 200px auto 0 auto;
+  }
+  .contact-contents-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    padding: 100px 70px 0 70px;
+  }
+  .contact-contents-container .contact-form {
+    padding: 50px;
+    -webkit-box-shadow: 15px 15px #ffc600;
+            box-shadow: 15px 15px #ffc600;
+    -webkit-box-flex: 2;
+        -ms-flex: 2 0 calc(80% - 50px);
+            flex: 2 0 calc(80% - 50px);
+    margin-right: 100px;
+    position: relative;
+    top: -200px;
+    max-width: 900px;
+  }
+  .contact-contents-container section {
+    -ms-flex-item-align: start;
+        align-self: flex-start;
+  }
+  .contact-info {
+    padding: 0;
+    -webkit-box-flex: 1;
+        -ms-flex: 1 0 20%;
+            flex: 1 0 20%;
+    width: auto;
   }
   .scroll-up-btn {
     display: none;
