--- a/styles/sass/layout/_media-queries.scss
+++ b/styles/sass/layout/_media-queries.scss
@@ -265,11 +265,12 @@
   // blog page
   .blog-header {
     height: 500px;
+    background-position: center;
     h1 {
       font-size: 5rem;
       letter-spacing: 4px;
       max-width: 1200px;
-      margin: 75px auto 0 auto;
+      margin: 200px auto 0 auto;
     }
   }
 
@@ -330,6 +331,44 @@
     }
   }
 
+  // contact page
+  .contact-header {
+    height: 500px;
+    background-position: center;
+    h1 {
+      font-size: 5rem;
+      letter-spacing: 4px;
+      max-width: 1200px;
+      margin: 200px auto 0 auto;
+    }
+  }
+
+  .contact-contents-container {
+    display: flex;
+    padding: 100px 70px 0 70px;
+    .contact-form {
+      padding: 50px;
+      @include box-shadow(15px, 15px, $color-gold);
+      flex: 2 0 calc(80% - 50px);
+      margin-right: 100px;
+      position: relative;
+      top: -200px;
+      max-width: 900px;
+    }
+    section {
+      align-self: flex-start;
+    }
+  }
+
+  .contact-info {
+    padding: 0;
+    flex: 1 0 20%;
+    width: auto;
+  }
+
+  
+
+  
 
   // scroll up button
   .scroll-up-btn {
