added wrapper to top bar

--- a/styles/sass/components/_top-bar.scss
+++ b/styles/sass/components/_top-bar.scss
@@ -17,7 +17,7 @@ input[type="checkbox"] {
 .top-bar {
   display: flex;
   justify-content: space-between;
-  padding: 5%;
+  padding-top: 20px;
 }
 
 .top-nav {
