--- a/styles/sass/components/_scroll-up-btn.scss
+++ b/styles/sass/components/_scroll-up-btn.scss
@@ -1,11 +1,11 @@
 .scroll-up-btn {
   text-decoration: none;
   color: $color-light;
-  padding: 10px 15px;
+  padding: 8px 12px;
   background-color: $color-green;
   @include box-shadow(-3px, 3px, $color-gold);
   position: fixed;
   z-index: 10;
-  bottom: 3%;
-  right: 5%;
+  bottom: 15px;
+  right: 15px;
 }
