finished desktop layouts

--- a/styles/sass/layout/_contact-mobile.scss
+++ b/styles/sass/layout/_contact-mobile.scss
@@ -6,9 +6,8 @@
 
 .contact-header h1 {
   @include header-styles();
-  margin: 75px 5% 0 5%;
+  margin-top: 75px;
   line-height: 0.7;
-  width: 180px;
 }
 
 .contact-form {
