--- a/styles/sass/layout/_home-mobile.scss
+++ b/styles/sass/layout/_home-mobile.scss
@@ -84,11 +84,11 @@ section.about2 {
   display: flex;
   margin-bottom: 30px;
   .about1-icon {
-    flex: 1 0 calc(50px - 10px);
-    margin-right: 10px;
+    // flex: 1 0 calc(50px - 10px);
+    margin-right: 20px;
   }
   .about1-text {
-    flex: 2 0 70%;
+    // flex: 2 0 70%;
     padding-top: 13px;
     h2 {
       @include header-styles(2rem);
