--- a/styles/style.css
+++ b/styles/style.css
@@ -588,16 +588,10 @@ section.about2 {
 }
 
 .about1-content .about1-icon {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 0 calc(50px - 10px);
-          flex: 1 0 calc(50px - 10px);
-  margin-right: 10px;
+  margin-right: 20px;
 }
 
 .about1-content .about1-text {
-  -webkit-box-flex: 2;
-      -ms-flex: 2 0 70%;
-          flex: 2 0 70%;
   padding-top: 13px;
 }
 
@@ -698,7 +692,7 @@ section.about2 {
 .blog-header h1 {
   font-size: 3.5rem;
   color: #ffc600;
-  margin: 75px 0 0 5%;
+  margin-top: 75px;
 }
 
 .post {
@@ -824,9 +818,8 @@ aside .aside-content p, aside .aside-content ul {
 .contact-header h1 {
   font-size: 3.5rem;
   color: #ffc600;
-  margin: 75px 5% 0 5%;
+  margin-top: 75px;
   line-height: 0.7;
-  width: 180px;
 }
 
 .contact-form {
@@ -892,6 +885,7 @@ footer p {
     -webkit-box-align: end;
         -ms-flex-align: end;
             align-items: end;
+    height: 290px;
   }
   .about2-content, .about3-content {
     padding: 0 15%;
@@ -899,6 +893,9 @@ footer p {
   .blog-header, .contact-header {
     height: 400px;
     background-position: bottom right;
+  }
+  .blog-header h1 {
+    margin-top: 160px;
   }
   .post {
     padding-left: 15%;
@@ -934,8 +931,8 @@ footer p {
     margin-top: 0;
   }
   .contact-header h1 {
-    width: initial;
     line-height: initial;
+    margin-top: 160px;
   }
   form {
     padding-left: 15%;
@@ -967,11 +964,6 @@ footer p {
   .wrapper {
     width: 90%;
   }
-  .top-bar {
-    padding: 20px 0;
-    max-width: 1200px;
-    margin: 0 auto;
-  }
   .top-nav label, .top-nav input {
     display: none;
     position: initial;
@@ -993,6 +985,10 @@ footer p {
   }
   .top-nav ul li:last-child {
     margin-right: 0;
+  }
+  .logo a:hover,
+  .logo a:focus {
+    color: #fafffe;
   }
   .top-nav li a:hover,
   .top-nav li a:focus {
@@ -1179,8 +1175,7 @@ footer p {
   .blog-header h1 {
     font-size: 5rem;
     letter-spacing: 4px;
-    max-width: 1200px;
-    margin: 200px auto 0 auto;
+    margin-top: 200px;
   }
   .blog-contents-container {
     display: -webkit-box;
@@ -1250,14 +1245,13 @@ footer p {
   .contact-header h1 {
     font-size: 5rem;
     letter-spacing: 4px;
-    max-width: 1200px;
-    margin: 200px auto 0 auto;
+    margin-top: 200px;
   }
   .contact-contents-container {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    padding-top: 100px;
+    padding: 100px 50px 0 50px;
     -ms-flex-pack: distribute;
         justify-content: space-around;
   }
