--- a/styles/sass/layout/_media-queries.scss
+++ b/styles/sass/layout/_media-queries.scss
@@ -18,8 +18,14 @@
   }
 
   .site-title {
-    align-items: end;
+    align-items: flex-end;
     height: 290px;
+    h1 {
+      font-size: 5rem;
+      span {
+        font-size: 1.8rem;
+      }
+    }
   }
 
   .about2-content, .about3-content {
@@ -143,7 +149,8 @@
     margin-left: 15px;
     padding-top: 30px;
     h1 {
-      font-size: 5rem;
+      font-size: 6rem;
+      letter-spacing: 2px;
       span {
         font-size: 2rem;
       }
@@ -152,8 +159,8 @@
 
   .header-block-img {
     display: initial;
-    flex: 1 0 calc(50% - 15px);
-    margin-right: 15px;
+    flex: 1 0 calc(50% - 20px);
+    margin-right: 20px;
     img {
       max-width: 695px;
     }
@@ -167,7 +174,7 @@
     display: flex;
     align-items: center;
     .intro-txt {
-      align-items: start;
+      align-items: flex-start;
       flex: 2 0 calc(70% - 100px);
       margin-right: 100px;
       h2 {
@@ -240,7 +247,7 @@
     top: -20px;
     .about2-text {
       padding-left: 100px;
-      align-items: end;
+      align-items: flex-end;
       p {
         text-align: right;
       }
@@ -257,7 +264,7 @@
       margin: 100px 0 0 0;
     }
     .about2-text {
-      align-items: start;
+      align-items: flex-start;
       padding-right: 100px;
     } 
   }
@@ -279,12 +286,12 @@
 
   .blog-contents-container {
     display: flex;
-    align-items: start;
+    align-items: flex-start;
     .blog-post {
       flex: 2 0 calc(70% - 100px);
       margin-right: 100px;
       position: relative;
-      top: -85px;
+      top: -100px;
       .post {
         padding: 0;
         border-right: 4px solid $color-green;
@@ -319,6 +326,14 @@
 
   .blog-text h2 {
     margin-top: 35px;
+  }
+
+  .blog-text h3 {
+    margin-bottom: 35px;
+  }
+
+  .blog-text p {
+    margin-bottom: 25px;
   }
 
   .blog-form {
